--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,7 @@ SQLAlchemy>=2.0.20
 numpy>=1.26.0
 sphinx>=7.2.0
 coveralls>=4.0.1
-psycopg>=3.1.16
+psycopg2-binary>=3.1.16
 mysql-connector-python>=8.4.0
 mysqlclient>=2.2.0
 sphinx_rtd_theme>=2.0.0
